[package]
name = "ext_count"
version = "1.0.1"
edition = "2021"
description = "Summarize the file extensions in a path, with estimated MIME types and average size per extension"
license = "MIT"
repository = "https://github.com/jnj16180340/extcount.git"


[dependencies]
clap = "4.4.6"
incr_stats = "1.0.1"
prettytable-rs = "0.10.0"
tree_magic = "0.2.3"
